refactor: 객체 생성용 클래스 정의
- 응집성을 위해 의존 객체 생성 로직과 데이터 초기화 로직을 GlobalBeanContainer, WebContext 클래스 내부로 이동
- 테스트 용이한 구조를 위해 protected setter를 사용하여 설정 클래스 정의